# app/src/swagger/swagger_spec.json
@@ -88,7 +88,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/auth"
+                            "$ref": "#/definitions/standardSuccessResponse"
                         }
                     }
                 }
@@ -530,7 +530,13 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/auth"
+                            "$ref": "#/definitions/standardSuccessResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Failure",
+                        "schema": {
+                            "$ref": "#/definitions/standardFailureResponse"
                         }
                     }
                 }
@@ -979,7 +985,7 @@
                     "type": "boolean"
                 },
                 "payload": {
-                    "type": "string"
+                    "type": "object"
                 }
             }
         },
@@ -1277,6 +1283,206 @@
                     "type": "string"
                 },
                 "lastName": {
+                    "type": "string"
+                }
+            }
+        },
+        "updateTrainerInfo": {
+            "title": "updateTrainerInfoRequest",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "birthDate": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                }
+            }
+        },
+        "updateTrainerContact": {
+            "title": "updateTrainerContact",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "secondaryPhone": {
+                    "type": "string"
+                },
+                "mobilePhone": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string",
+                    "format": "email"
+                }
+            }
+        },
+        "updateTrainerAddress": {
+            "title": "updateTrainerAddress",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "street1": {
+                    "type": "string"
+                },
+                "street2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "zipCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "updateTrainerPassword": {
+            "title": "updateTrainerPassword",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "credentials": {
+                    "type": "object",
+                    "title": "contact",
+                    "properties": {
+                        "password": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "updateTrainersClients": {
+            "title": "updateTrainersClients",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "clients": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "uuid"
+                    },
+                    "uniqueItems": true
+                }
+            }
+        },
+        "updateClientContact": {
+            "title": "updateClientContact",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "secondaryPhone": {
+                    "type": "string"
+                },
+                "mobilePhone": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "updateClientAddress": {
+            "title": "updateClientAddress",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "street1": {
+                    "type": "string"
+                },
+                "street2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "zipCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "scheduleAppointment": {
+            "title": "scheduleAppointment",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "appointmentId": {
+                    "type": "string"
+                },
+                "appointmentType": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "trainer": {
+                    "type": "string"
+                },
+                "clients": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string",
+                        "format": "uuid"
+                    },
+                    "uniqueItems": true
+                },
+                "notes": {
+                    "type": "string"
+                }
+            },
+            "required": [
+                "appointmentType",
+                "date",
+                "startTime",
+                "endTime",
+                "trainer"
+            ]
+        },
+        "cancelAppointment": {
+            "title": "cancelAppointment",
+            "properties": {
+                "appointmentId": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "entityName": {
                     "type": "string"
                 }
             }
